<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Background"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:layout_gravity="left|top"
        android:contentDescription="@string/description"
        android:src="@drawable/doctor_big" />

    <LinearLayout
        android:id="@+id/layoutOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/tvID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/name"
            android:textColor="@color/Black" />


        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/height"
            android:textColor="@color/Black" />
        
        
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/gender"
            android:textColor="@color/Black" />
        
         <TextView
            android:id="@+id/tvSpecializtion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_gravity="left"
            android:text="@string/dateOfBirth"
            android:textColor="@color/Black" />


        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="2dp"
            android:text="@string/bloodGroup"
            android:textColor="@color/Black" />
    </LinearLayout>


</LinearLayout>