<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Background"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:layout_gravity="left|top"
        android:contentDescription="@string/description"
        android:src="@drawable/medicine_big" />

    <LinearLayout
        android:id="@+id/layoutOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/tvID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="17sp"
            android:padding="2dp"
            android:text="@string/name"
            android:textColor="@color/Black" />

     
         <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:padding="2dp"
            android:text="@string/dateOfBirth"
            android:textColor="@color/Black" />

        <TextView
            android:id="@+id/tvPurpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/height"
            android:textColor="@color/Black" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="2dp"
            android:text="@string/gender"
            android:textColor="@color/Black" />
        
          

        <TextView
            android:id="@+id/tvAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:visibility="gone"
            android:padding="2dp"
            android:text="@string/weight"
            android:textColor="@color/Black" />
    </LinearLayout>

</LinearLayout>