<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ivPrescription"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:contentDescription="@string/myImageDescription"
                android:padding="5dp"
                android:src="@drawable/add" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <Button
                    android:id="@+id/btnImagePrescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/DarkRed"
                    android:padding="10dp"
                    android:text="@string/takePhoto"
                    android:textColor="#FFFFFF"
                    android:typeface="monospace" />

               

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvDrname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/DrName"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#384248"
                        android:textSize="16sp"
                        android:typeface="monospace" />

                    <EditText
                        android:id="@+id/etDrName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="#384248" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#384248"
                        android:textSize="16sp"
                        android:typeface="monospace" />

                    <EditText
                        android:id="@+id/etDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:textColor="#384248" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvPurpose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/purpose"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#384248"
                        android:textSize="16sp"
                        android:typeface="monospace" />

                    <EditText
                        android:id="@+id/etPurpose"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:textColor="#384248" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center_vertical" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical"
            android:background="@color/DarkRed"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            android:typeface="monospace" />
    </LinearLayout>

</LinearLayout>