<?xml version="1.0" encoding="utf-8"?>


   

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/Background"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ivProfilePhoto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/myImageDescription"
                android:padding="5dp"
                android:src="@drawable/user_big" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <Button
                    android:id="@+id/btnProfilePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@color/DarkRed"
                    android:onClick="takePhoto"
                    android:padding="14dp"
                    android:text="@string/takePhoto"
                    android:textColor="#FFFFFF"
                    android:typeface="monospace" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/name"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#384248"
                        android:textSize="16sp"
                        android:typeface="monospace" />

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="text"
                        android:textColor="#384248" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvDateOfBirth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/dateOfBirth"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#384248"
                        android:textSize="16sp"
                        android:typeface="monospace" />

                    <EditText
                        android:id="@+id/etDateOfBirth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="date"
                        android:textColor="#384248" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvWeight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/weight"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#384248"
                        android:textSize="16sp"
                        android:typeface="monospace" />

                    <EditText
                        android:id="@+id/etWeight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="text"
                        android:textColor="#384248" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvHeight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/height"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#384248"
                        android:textSize="16sp"
                        android:typeface="monospace" />

                    <EditText
                        android:id="@+id/etHeight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="text"
                        android:textColor="#384248" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvGender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/gender"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#384248"
                        android:textSize="16sp"
                        android:typeface="monospace" />

                    <Spinner
                        
                        android:id="@+id/spGender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="#384248" />
                </LinearLayout>
                
                  <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvBloodGroup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/bloodGroup"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#384248"
                        android:textSize="16sp"
                        android:typeface="monospace" />

                    <EditText
                        android:id="@+id/etBloodGroup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="text"
                        android:textColor="#384248" />
                </LinearLayout>
                
                
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_vertical" >

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_vertical"
                    android:background="@color/DarkRed"
                    android:text="@string/save"
                    android:textColor="#FFFFFF"
                    android:typeface="monospace" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

